--- a/CelebrationApp/CelebrationApp/Views/RegistrationPage.xaml
+++ b/CelebrationApp/CelebrationApp/Views/RegistrationPage.xaml
@@ -6,9 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="using:CelebrationApp.ViewModels"
-    mc:Ignorable="d"
-    Width="780"
-    Height="700"    
+    mc:Ignorable="d"          
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
@@ -16,7 +14,6 @@
             <Setter Property="Margin" Value="0,0,0,10"/>
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="Width" Value="600"/>
-
         </Style>
         <Style TargetType="TextBlock"  x:Key="Label">
             <Setter Property="Margin" Value="0,0,0,5"/>
@@ -30,32 +27,32 @@
     </Page.Resources>
 
     <Grid Background="LightCoral">
-        <Grid.RowDefinitions>
+        <!--<Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+        </Grid.RowDefinitions>-->
 
 
-        <StackPanel Grid.Row="0" HorizontalAlignment="Center" Margin="0,0,50,0" >
+        <StackPanel  HorizontalAlignment="Center" Margin="0,0,50,0" >
             <TextBlock Text="Registration note screen" FontSize="40" Margin="0,10,0,20"/>
             <TextBlock Text="Name:" Style="{StaticResource Label}"/>
-            <TextBox Text="{x:Bind ViewModel.Name}"/>
+            <TextBox Text="{x:Bind ViewModel.Name, Mode=OneWay}"/>
             <TextBlock Text="Celebration Date:" Style="{StaticResource Label}"/>
             <!--<CalendarDatePicker PlaceholderText="Pick a date" Header="Calendar"                             
                                 Date="{x:Bind ViewModel.CelebrationDate, Mode=TwoWay}"
-                                DateFormat="{}{day.integer} {month.full} {year.full}"/>-->
-            <DatePicker Header="Pick a date" SelectedDate="{x:Bind ViewModel.CelebrationDate}"/>
+                                DateFormat="{}{day.integer}/{month.integer}/{year.Full}"/>-->
+            <DatePicker Header="Pick a date" SelectedDate="{x:Bind ViewModel.CelebrationDate}" />
             <TextBlock Text="Description:" Style="{StaticResource Label}"/>
-            <TextBox Text="{x:Bind ViewModel.Description, Mode=TwoWay}" TextWrapping="Wrap" Height="200"/>
+            <TextBox Text="{x:Bind ViewModel.Description, Mode=OneWay}" TextWrapping="Wrap" Height="200"/>
             <TextBlock Text="Record Date:" Style="{StaticResource Label}"/>
-            <TextBlock Text="{x:Bind ViewModel.RecordDate, Mode=TwoWay}" />
+            <TextBlock Text="{x:Bind ViewModel.RecordDate, Mode=OneWay}" />
+            
+            <StackPanel  HorizontalAlignment="Center" Orientation="Horizontal">
+                <Button Content="Save" Click="Save_Click"/>
+                <Button Content="Clean" Click="Clean_Click"/>
+                <Button Content="Remove" Click="Remove_Click"/>
+            </StackPanel>
         </StackPanel>
 
-        <StackPanel Grid.Row="1" HorizontalAlignment="Center" Orientation="Horizontal">
-            <Button Content="Save" Click="Save_Click"/>
-            <Button Content="Clean" Click="Clean_Click"/>
-            <Button Content="Remove" Click="Remove_Click"/>
-
-        </StackPanel>
     </Grid>
 </Page>
