Fix in RagistrationPage (View and ViewModel), created new things (Services and ListPage (View and ViewModel))

--- a/CelebrationApp/CelebrationApp/MainWindow.xaml
+++ b/CelebrationApp/CelebrationApp/MainWindow.xaml
@@ -7,5 +7,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:views="using:CelebrationApp.Views"
     mc:Ignorable="d">
 
-    <views:RegistrationPage />
+    <views:RegistrationPage/>
+    <!--<views:ListPage/>-->
 </Window>
