Created and configure Services about database

--- a/CelebrationApp/CelebrationApp/MainWindow.xaml
+++ b/CelebrationApp/CelebrationApp/MainWindow.xaml
@@ -8,7 +8,7 @@
     xmlns:views="using:CelebrationApp.Views"
     mc:Ignorable="d">
 
-    <views:RegistrationPage/>
+    <views:ExampleViewPage/>
 
     <!--<views:ListPage/>-->
 </Window>
