--- a/CelebrationApp/CelebrationApp/Views/RegistrationPage.xaml
+++ b/CelebrationApp/CelebrationApp/Views/RegistrationPage.xaml
@@ -25,30 +25,50 @@
         </Style>
     </Page.Resources>
 
-    <Grid Background="LightGray">
-      
+    <Grid Background="LightGray">        
         <StackPanel  HorizontalAlignment="Center" Margin="0,0,50,0" VerticalAlignment="Stretch">
             <TextBlock Text="Registration note screen" FontSize="40" Margin="0,10,0,20" FontFamily="Poppins"/>
-            <TextBlock Text="Name:" Style="{StaticResource Label}"/>
-            <TextBox Text="{x:Bind ViewModel.Name, Mode=OneWay}"/>
-            <DatePicker Header="Pick a Celebration Date:" 
-                        SelectedDateChanged="{x:Bind ViewModel.DateChanged}" 
+
+            <TextBlock Text="Name:" Style="{StaticResource Label}" />
+            <TextBox Text="{x:Bind ViewModel.Name, Mode=TwoWay}" 
+                     PlaceholderText="Name"/>
+
+            <TextBlock Text="Celebration Date:" Style="{StaticResource Label}"/>
+            <DatePicker SelectedDate="{x:Bind ViewModel.datePicker.SelectedDate, Mode=TwoWay}"
+                        SelectedDateChanged="{x:Bind ViewModel.DateChanged, UpdateSourceTrigger=PropertyChanged}"
                         MinYear="{x:Bind ViewModel.datePicker.MinYear}"
                         MaxYear="{x:Bind ViewModel.datePicker.MaxYear}"/>
-            <TextBlock Text="Celebration Date:" Style="{StaticResource Label}"/>
-            <TextBlock Text="{x:Bind ViewModel.TextDate, Mode=OneWay}"/>
+
             <TextBlock Text="Description:" Style="{StaticResource Label}"/>
-            <TextBox Text="{x:Bind ViewModel.Description, Mode=OneWay}" TextWrapping="Wrap" Height="200"/>
+            <TextBox Text="{x:Bind ViewModel.Description, Mode=TwoWay}" 
+                     PlaceholderText="Enter your description..." 
+                     TextWrapping="Wrap" 
+                     Height="200"/>
+
             <TextBlock Text="Record Date:" Style="{StaticResource Label}"/>
             <TextBlock Text="{x:Bind ViewModel.RecordDate, Mode=OneWay}" />
 
-            <StackPanel  HorizontalAlignment="Center" Orientation="Horizontal" VerticalAlignment="Stretch">
-                <Button Content="Save" Click="{x:Bind ViewModel.Save}" Visibility="{x:Bind ViewModel.SaveClearVisible, Mode=TwoWay}"/>
-                <Button Content="Update" Click="{x:Bind ViewModel.Update}" Visibility="{x:Bind ViewModel.UpdateRemoveVisible, Mode=TwoWay}"/>
-                <Button Content="Clean" Click="{x:Bind ViewModel.Clean}"/>
-                <Button Content="Remove" Click="{x:Bind ViewModel.Remove}"/>
+            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" VerticalAlignment="Stretch">
+                <Button Content="Save" 
+                        Click="{x:Bind ViewModel.Save}" 
+                        Visibility="{x:Bind ViewModel.SaveClearVisible, Mode=TwoWay}" 
+                        Background="LightGreen"
+                        CornerRadius="20"/>
+                <Button Content="Update" 
+                        Click="{x:Bind ViewModel.Update}" 
+                        Visibility="{x:Bind ViewModel.UpdateRemoveVisible, Mode=TwoWay}"
+                        Background="LightGreen"
+                        CornerRadius="20"/>
+                <Button Content="Clean" 
+                        Click="{x:Bind ViewModel.Clean}" 
+                        Background="LightBlue"
+                        CornerRadius="20"/>
+                <Button Content="Remove" 
+                        Click="{x:Bind ViewModel.Remove}" 
+                        Background="LightCoral"
+                        CornerRadius="20"/>
             </StackPanel>
         </StackPanel>
-
+        
     </Grid>
 </Page>
