created command and service about celebration records

--- a/CelebrationApp/CelebrationApp/MainWindow.xaml
+++ b/CelebrationApp/CelebrationApp/MainWindow.xaml
@@ -8,7 +8,7 @@
     xmlns:views="using:CelebrationApp.Views"
     mc:Ignorable="d">
 
-    <views:ExampleViewPage/>
+    <!--<views:RegistrationPage/>-->
 
-    <!--<views:ListPage/>-->
+    <views:ListPage/>
 </Window>
