--- a/CelebrationApp/CelebrationApp/Views/RegistrationPage.xaml
+++ b/CelebrationApp/CelebrationApp/Views/RegistrationPage.xaml
@@ -30,7 +30,7 @@
             <StackPanel  HorizontalAlignment="Center" Margin="0,0,50,0" VerticalAlignment="Stretch">
                 <TextBlock Text="Registration note screen" FontSize="40" Margin="0,10,0,20" FontFamily="Poppins"/>
                 <TextBlock Text="Name:" Style="{StaticResource Label}"/>
-                <TextBox Text="{x:Bind ViewModel.Name, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+                <TextBox Text="{x:Bind ViewModel.Name, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" PlaceholderText="Name"/>
                 <TextBlock Text="Celebration Date:" Style="{StaticResource Label}"/>
                 <DatePicker 
                         SelectedDate="{x:Bind ViewModel.datePicker.SelectedDate, Mode=TwoWay}"
@@ -38,14 +38,30 @@
                         MinYear="{x:Bind ViewModel.datePicker.MinYear}"
                         MaxYear="{x:Bind ViewModel.datePicker.MaxYear}"/>
                 <TextBlock Text="Description:" Style="{StaticResource Label}"/>
-                <TextBox Text="{x:Bind ViewModel.Description, Mode=OneWay}" TextWrapping="Wrap" Height="200"/>
+                <TextBox Text="{x:Bind ViewModel.Description, Mode=TwoWay}" 
+                         PlaceholderText="Enter your description..." 
+                         TextWrapping="Wrap" Height="200"/>
                 <TextBlock Text="Record Date:" Style="{StaticResource Label}"/>
                 <TextBlock Text="{x:Bind ViewModel.RecordDate, Mode=OneWay}" />
 
                 <StackPanel  HorizontalAlignment="Center" Orientation="Horizontal" VerticalAlignment="Stretch">
-                    <Button Content="Save" Command="{x:Bind ViewModel.SubmitCommand}"/>
-                    <Button Content="Clean" Click="{x:Bind ViewModel.Clean}"/>
-                    <Button Content="Remove" Click="{x:Bind ViewModel.Remove}"/>
+                    <Button Content="Save"
+                            Command="{x:Bind ViewModel.SubmitCommand}"
+                            Visibility="{x:Bind ViewModel.SaveClearVisible, Mode=TwoWay}"
+                            Background="LightGreen"
+                            CornerRadius="20"/>
+                    <Button Content="Update"
+                            Visibility="{x:Bind ViewModel.UpdateRemoveVisible, Mode=TwoWay}"
+                            Background="LightGreen"
+                            CornerRadius="20"/>
+                    <Button Content="Clean"
+                            Click="{x:Bind ViewModel.Clean}"
+                            Background="LightBlue"
+                            CornerRadius="20"/>
+                    <Button Content="Remove"
+                            Click="{x:Bind ViewModel.Remove}"
+                            Background="LightCoral"
+                            CornerRadius="20"/>
                 </StackPanel>
             </StackPanel>
 
