--- a/CelebrationApp/CelebrationApp/Views/ListPage.xaml
+++ b/CelebrationApp/CelebrationApp/Views/ListPage.xaml
@@ -10,8 +10,22 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
+        <DataTemplate x:Key="CelebrationTemplate" x:DataType="viewmodels:CelebrationRecordViewModel" >
+            <Grid Padding="0,0,0,20" Background="LightSkyBlue">
+                <StackPanel>
+                    <Image Source="{x:Bind Image}" Width="100" Height="100" Margin="0,0,20,0"/>
+
+                    <StackPanel  VerticalAlignment="Center">
+                        <TextBlock Text="{x:Bind Name}"/>
+                        <TextBlock Text="{x:Bind RegisterDate}"/>
+                        <TextBlock Text="{x:Bind Description}"/>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+
         <Style TargetType="Button" x:Key="SmallButton" >
-            <Setter Property="Margin" Value="10,0,0,10"/>            
+            <Setter Property="Margin" Value="10,0,0,10"/>
             <Setter Property="Width" Value="70"/>
         </Style>
     </Page.Resources>
@@ -21,11 +35,23 @@
             <StackPanel>
                 <TextBlock Text="Celebration App" FontSize="40" Margin="0,10,0,20" HorizontalAlignment="Center"/>
                 <TextBlock Text="Day Celebrations:" FontSize="20" HorizontalAlignment="Center" Margin="0,10,350,10"/>
-                <Grid Width="500" Height="250" Background="Black"/>
+                <ScrollViewer>
+                    <GridView ItemTemplate="{StaticResource CelebrationTemplate}"
+                      ItemsSource="{x:Bind ViewModel.CelebrationListDay}"
+                      SelectionMode="None"
+                      IsItemClickEnabled="True"
+                      ItemClick="{x:Bind ViewModel.OpenRegistrationPage}"/>
+                </ScrollViewer>
                 <TextBlock Text="Month Celebrations:" FontSize="20" HorizontalAlignment="Center" Margin="0,10,330,10"/>
-                <Grid Width="500" Height="250" Background="White"/>
+                <ScrollViewer>
+                    <GridView ItemTemplate="{StaticResource CelebrationTemplate}"
+                      ItemsSource="{x:Bind ViewModel.CelebrationListMonth}"
+                      SelectionMode="None"
+                      IsItemClickEnabled="True"
+                      ItemClick="{x:Bind ViewModel.OpenRegistrationPage}"/>
+                </ScrollViewer>
                 <Button Content="Open List" Click="{x:Bind ViewModel.OpenList}" Width="237" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,10,10,5"/>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">                    
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Button Content="Create" Click="{x:Bind ViewModel.Create}" Style="{StaticResource SmallButton}"/>
                     <Button Content="Refresh" Click="{x:Bind ViewModel.Refresh}" Style="{StaticResource SmallButton}"/>
                     <Button Content="Close" Click="{x:Bind ViewModel.Close}" Style="{StaticResource SmallButton}"/>
