--- a/CelebrationApp/CelebrationApp/Views/RegistrationPage.xaml
+++ b/CelebrationApp/CelebrationApp/Views/RegistrationPage.xaml
@@ -62,6 +62,10 @@
                             Click="{x:Bind ViewModel.Remove}"
                             Background="LightCoral"
                             CornerRadius="20"/>
+                    <Button Content="Cancel"
+                            Command="{x:Bind ViewModel.CancelCommand}"
+                            Background="LightCoral"
+                            CornerRadius="20"/>
                 </StackPanel>
             </StackPanel>
 
