--- a/CelebrationApp/CelebrationApp/Views/ListPage.xaml
+++ b/CelebrationApp/CelebrationApp/Views/ListPage.xaml
@@ -21,7 +21,7 @@
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Date: "/>
-                            <TextBlock Text="{x:Bind CelebrationDate}"/>
+                            <TextBlock Text="{x:Bind CelebrationDate.Day}"/>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
