--- a/CelebrationAppWPF/MainWindow.xaml
+++ b/CelebrationAppWPF/MainWindow.xaml
@@ -7,5 +7,5 @@
         xmlns:views="clr-namespace:CelebrationAppWPF.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <views:ClebrationListPage/>
+    <views:CelebrationListPage/>
 </Window>
