--- a/CelebrationAppWPF/Views/CelebrationListPage.xaml
+++ b/CelebrationAppWPF/Views/CelebrationListPage.xaml
@@ -6,16 +6,24 @@
       xmlns:local="clr-namespace:CelebrationAppWPF.Views"
       mc:Ignorable="d"
       xmlns:viewmodels="using:CelebrationAppWPF.ViewModels" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="390" d:DesignWidth="550"
       
       Title="CelebrationListPage">
 
-    <Grid Background="LightGray">
-        <ScrollViewer>
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FF1E72ED" Offset="0.2"/>
+                <GradientStop Color="#FF15BEDF" Offset="0.4"/>
+                <GradientStop Color="LightBlue" Offset="0.6"/>
+                <GradientStop Color="#FFF6F6F6" Offset="0.8"/>
+            </LinearGradientBrush>
+        </Grid.Background>
             <StackPanel>
-                <TextBlock Text="Celebrations List" FontSize="40" Margin="0,10,0,20" HorizontalAlignment="Center"/>
-                <Grid Width="500" Height="300" Background="Black">
-                    <ListView Margin="0 25 0 0" 
+                <TextBlock Text="Celebrations List" FontSize="40" Margin="0,10,0,20" HorizontalAlignment="Center" Foreground="White" FontFamily="Georgia" FontWeight="SemiBold"/>
+                <Grid Width="500" Height="300" Background="LightBlue">
+                <TextBlock Text="Choose the record" FontFamily="Georgia" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,10,0,0"/>
+                <ListView Margin="0 25 0 0"                               
                               ItemsSource="{Binding CelebrationList}" 
                               SelectedItem="{Binding SelectedCelebration, Mode=TwoWay}">
                         <ListView.ItemContainerStyle>
@@ -40,7 +48,7 @@
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
-
+                                
                                 <GridViewColumn Header="Record Date">
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
@@ -57,7 +65,6 @@
                         </i:Interaction.Triggers>
                     </ListView>
                 </Grid>
-            </StackPanel>
-        </ScrollViewer>
+            </StackPanel>       
     </Grid>
 </Page>
