--- a/CelebrationCore/MainWindow.xaml
+++ b/CelebrationCore/MainWindow.xaml
@@ -1,11 +1,12 @@
-﻿<Window 
-    x:Class="CelebrationApp.MainWindow"
+﻿<Window
+    x:Class="CelebrationCore.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CelebrationApp"
+    xmlns:local="using:CelebrationCore"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:views="using:CelebrationApp.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+    <Grid x:Name="AppTitleBar">
+    </Grid>
 </Window>
