--- a/CelebrationApp/CelebrationApp/Views/RegistrationPage.xaml
+++ b/CelebrationApp/CelebrationApp/Views/RegistrationPage.xaml
@@ -30,7 +30,7 @@
 
     <Grid>
         <Grid.Background>
-            <ImageBrush Stretch="Fill" ImageSource="ms-appx:///Assets/Images/BlueSky.jpg" AlignmentY="Top" AlignmentX="Center" />
+            <ImageBrush Stretch="Fill" ImageSource="ms-appx:///../CelebrationCore/Assets/Images/BlueSky.jpg" AlignmentY="Top" AlignmentX="Center" />
         </Grid.Background>
         <ScrollViewer>
             <StackPanel  HorizontalAlignment="Center" Margin="0,20,50,0" VerticalAlignment="Stretch">
