--- a/CelebrationAppWPF/Views/CelebrationListPage.xaml
+++ b/CelebrationAppWPF/Views/CelebrationListPage.xaml
@@ -1,16 +1,18 @@
 ﻿<Page x:Class="CelebrationAppWPF.Views.CelebrationListPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CelebrationAppWPF.Views"
-      mc:Ignorable="d"
-      xmlns:viewmodels="using:CelebrationAppWPF.ViewModels" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-      d:DesignHeight="390" d:DesignWidth="550"
-      
-      Title="CelebrationListPage">
+xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+xmlns:local="clr-namespace:CelebrationAppWPF.Views"
+mc:Ignorable="d"
+xmlns:viewmodels="using:CelebrationAppWPF.ViewModels" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+d:DesignHeight="390" d:DesignWidth="550"
+
+Title="CelebrationListPage">
 
     <Grid>
+        
+
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="#FF1E72ED" Offset="0.2"/>
@@ -19,52 +21,73 @@
                 <GradientStop Color="#FFF6F6F6" Offset="0.8"/>
             </LinearGradientBrush>
         </Grid.Background>
-            <StackPanel>
-                <TextBlock Text="Celebrations List" FontSize="40" Margin="0,10,0,20" HorizontalAlignment="Center" Foreground="White" FontFamily="Georgia" FontWeight="SemiBold"/>
-                <Grid Width="500" Height="300" Background="LightBlue">
-                <TextBlock Text="Choose the record" FontFamily="Georgia" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,10,0,0"/>
-                <ListView Margin="0 25 0 0"                               
-                              ItemsSource="{Binding CelebrationList}" 
-                              SelectedItem="{Binding SelectedCelebration, Mode=TwoWay}">
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="ListViewItem">
-                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                            </Style>
-                        </ListView.ItemContainerStyle>
-                        <ListView.View >
-                            <GridView>
-                                <GridViewColumn Header="Name">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Name}" Padding="0 0 20 0"/>
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
+        <StackPanel>
+            <TextBlock Text="Celebrations List" FontSize="40" Margin="0,10,0,20" HorizontalAlignment="Center" Foreground="White" FontFamily="Georgia" FontWeight="SemiBold"/>
 
-                                <GridViewColumn Header="Celebration Date">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding CelebrationDate}" Padding="0 0 20 0"/>
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
-                                
-                                <GridViewColumn Header="Record Date">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding RegisterDate}" Padding="0 0 20 0"/>
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
-                            </GridView>
-                        </ListView.View>
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="SelectionChanged">
-                                <i:InvokeCommandAction Command="{Binding OpenCelebrationCommand}" CommandParameter="{Binding SelectedCelebration, Mode=TwoWay}"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </ListView>
-                </Grid>
-            </StackPanel>       
+            <Grid Width="500" Height="300" Background="#FF15BEDF">
+                <TextBlock Text="Choose the record" FontFamily="Georgia" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,10,0,0" Foreground="White"/>
+                <ListView Margin="0 25 0 0"
+                    ItemsSource="{Binding CelebrationList}"
+                    SelectedItem="{Binding SelectedCelebration, Mode=TwoWay}">
+
+                    <ListView.View>
+                        <GridView>
+                            <GridView.ColumnHeaderContainerStyle>
+                                <Style TargetType="{x:Type GridViewColumnHeader}">
+                                    <Setter Property="Background" Value="#FF1E72ED"></Setter>
+                                    <Setter Property="Foreground" Value="White"></Setter>
+                                    <Setter Property="FontFamily" Value="Georgia"></Setter>
+                                </Style>
+                            </GridView.ColumnHeaderContainerStyle>
+
+
+
+                            <GridViewColumn Header="Name">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Name}" Padding="0 0 20 0"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+
+
+
+                            <GridViewColumn Header="Celebration Date">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding CelebrationDateView}" Padding="0 0 20 0"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+
+
+
+                            <GridViewColumn Header="Record Date">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding RegisterDate}" Padding="0 0 20 0"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+
+
+
+                            <GridViewColumn Header="Description" Width="99">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Description}" Padding="0 0 20 0" TextTrimming="CharacterEllipsis" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectionChanged">
+                            <i:InvokeCommandAction Command="{Binding OpenCelebrationCommand}" CommandParameter="{Binding SelectedCelebration, Mode=TwoWay}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </ListView>
+            </Grid>
+        </StackPanel>
     </Grid>
 </Page>
