Resolved a error about updatecommand

--- a/CelebrationAppWPF/Views/CelebrationListPage.xaml
+++ b/CelebrationAppWPF/Views/CelebrationListPage.xaml
@@ -28,7 +28,8 @@ Title="CelebrationListPage">
                 <TextBlock Text="Choose the record" FontFamily="Georgia" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,10,0,0" Foreground="White"/>
                 <ListView Margin="0 25 0 0"
                     ItemsSource="{Binding CelebrationList}"
-                    SelectedItem="{Binding SelectedCelebration, Mode=TwoWay}">
+                    SelectedItem="{Binding SelectedCelebration, Mode=TwoWay}"
+                    SelectionMode="Single">
 
                     <ListView.View>
                         <GridView>
@@ -74,7 +75,7 @@ Title="CelebrationListPage">
                         </GridView>
                     </ListView.View>
                     <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="SelectionChanged">
+                        <i:EventTrigger EventName="MouseDoubleClick">
                             <i:InvokeCommandAction Command="{Binding OpenCelebrationCommand}" CommandParameter="{Binding SelectedCelebration, Mode=TwoWay}"/>
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
